# PEDeadReckoning

./: .gitignore  BRANCHES.txt  CHANGELOG.txt  CMakeLists.txt  LICENSE.txt  README.txt  build_and_run_ut.sh  run_ut.sh
calibration/: CMakeLists.txt
calibration/doc/: ScaleCalibration.xlsx
calibration/docs/: Normalization.xlsx
calibration/include/: PECCalibration.h  PECCalibrationBase.h  PECCalibrationEx.h  PECCalibrationScale.h  PECCalibrationSummary.h  PECCalibrationUni.h  PECNormalisation.h  PECalibration.h  PECalibrationBase.h  PECalibrationEx.h  PECalibrationScale.h  PEICalibration.h  PENormalisation.h  PEPositionFilter.h  PEState.h
calibration/source/: PECCalibration.cpp  PECCalibrationBase.cpp  PECCalibrationEx.cpp  PECCalibrationScale.cpp  PECCalibrationSummary.cpp  PECCalibrationUni.cpp  PECNormalisation.cpp
calibration/sources/: PECalibration.cpp  PECalibrationBase.cpp  PECalibrationEx.cpp  PECalibrationScale.cpp  PENormalisation.cpp  PEPositionFilter.cpp  PEPositionFilterEx.cpp  PEState.cpp
calibration/test/ut/: CMakeLists.txt  PECCalibrationBaseTest.cpp  PECCalibrationScaleTest.cpp  PECalibrationBaseTest.cpp  PECalibrationExTest.cpp  PECalibrationScaleTest.cpp  PECalibrationTest.cpp  PENormalisationTest.cpp  PEPositionFilterTest.cpp
calibration/test/ut/mock/: PECNormalisationMock.h
calibration/test/ut/mocks/: mock_PENormalisation.h
cmake/: shared.cmake
common/: CMakeLists.txt
common/include/: PECSensor  PECSensor.h  PEISensor.h  PESBasicSensor.h  PESPosition.h  PETools.h  PETypes.h
common/source/: PECSensor.cpp  PESBasicSensor.cpp  PESPosition.cpp  PETools.cpp
common/test/ut/: CMakeLists.txt  PESBasicSensorTest.cpp  PESPositionTest.cpp  PEToolsTest.cpp
core/: CMakeLists.txt
core/include/: PECCore.h  PECCoreSimple.h  PECNormCfg.h  PECSensorCfg.h  PECSensorEntity.h  PECore.h
core/source/: PECCore.cpp  PECCoreSimple.cpp  PECSensorCfg.cpp  PECSensorEntity.cpp  PECore.cpp
doc/: CodingConvention.txt
filter/include/: PECKalmanFilter.h  PECPositionFilterSpeed.h  PEIPositionFilter.h
filter/test/ut/: CMakeLists.txt  PECPositionFilterSpeedTest.cpp
fusion/doc/: Fusion_GNSS_GYRO_ODO.xlsx  Fusion_GNSS_GYRO_ODO_2.xlsx  Fusion_RAW_CAN.xlsx
fusion/include/: PECFusionSensor.h  PEFusionTools.h
fusion/source/: PECFusionSensor.cpp  PEFusionTools.cpp
fusion/test/ut/: CMakeLists.txt  PECFusionSensorTest.cpp
include/: PECfg.h  PECfgSensor.h  PEEngine.h  PESensor.h  PESensors.h  PETools.h  PETypes.h
new-coding-style/: README.txt  build_and_run_ut.sh
new-coding-style/calibration/sources/: PECPositionFilterSpeed.cpp
new-coding-style/calibration/test/ut/: CMakeLists.txt  PECCalibrationBaseTest.cpp  PECCalibrationScaleTest.cpp  PECNormalisationTest.cpp  PECPositionFilterSpeedTest.cpp
new-coding-style/common/include/: PESPosition.h  PETools.h  PETypes.h
new-coding-style/common/sources/: PESPosition.cpp  PETools.cpp
new-coding-style/common/test/ut/: CMakeLists.txt  PESPositionTest.cpp  PEToolsTest.cpp
new-coding-style/docs/: CodingConvention.txt
normalisation/: CMakeLists.txt
normalisation/doc/: Normalization.xlsx
normalisation/include/: PECNormalisation.h
normalisation/source/: PECNormalisation.cpp
sensors/include/: PECGyroscope.h  PECOdometer.h  PECOdometerEx.h  PECSensor.h  PESensorTools.h
sensors/source/: PECGyroscope.cpp  PECOdometer.cpp  PECOdometerEx.cpp  PECSensor.cpp  PESensorTools.cpp
sources/: PECfg.cpp  PEEngine.cpp  PESensors.cpp
test/ut/: CMakeLists.txt  PECCalibrationBaseTest.cpp  PECCalibrationScaleTest.cpp  PECCalibrationSummaryTest.cpp  PECCalibrationTest.cpp  PECCoreSimpleTest.cpp  PECFusionSensorTest.cpp  PECGyroscopeTest.cpp  PECNormalisationTest.cpp  PECOdometerExTest.cpp  PECOdometerTest.cpp  PECSensorCfgTest.cpp  PECSensorEntityTest.cpp  PECSensorTest.cpp  PECoreTest.cpp  PEFusionToolsTest.cpp  PESBasicSensorTest.cpp  PESPositionTest.cpp  PESensorToolsTest.cpp  PEToolsTest.cpp  PETypesTest.cpp
test/ut/testtracks/: ODO_40ms_60sec_GNSS_100ms_32sec.txt
utils/: CMakeLists.txt
utils/include/: PETools.h  PETypes.h
utils/sources/: PETools.cpp
utils/test/ut/: CMakeLists.txt  PEToolsTest.cpp  PETypesTest.cpp
